--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@ body {
     width: 100%;
     height: 62px;
     background: #083644;
-    padding: 20px 0;
+    padding: 10px 0;
 }
 
 .header__menu {
@@ -16,11 +16,68 @@ body {
     padding: 0 20px;
 }
 
+.menu__input {
+    height: 42px;
+    width: 100%;
+    padding: 12px;
+    font-family: Plus Jakarta Sans, Verdana, Geneva, Tahoma, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 16px;
+}
+
 .menu__button {
     text-decoration: none;
     background: transparent;
     border: none;
     color: #ffffff;
+    margin: 12px 0;
+}
+
+.menu__search_form {
+    font-family: Poppins, Verdana, Geneva, Tahoma, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #0A2530;
+    text-decoration: none;
+}
+
+.menu__search_form a{
+    text-decoration: none;
+    color: #0A2530;
+}
+
+.search_form__category {
+    padding: 0;
+    margin-bottom: 10px;
+}
+
+.search_form__category li{
+    display: inline;
+    margin-right: 10px;
+}
+
+.search_form__category__active {
+    font-weight: bold;
+}
+
+.search_form__icon{
+    width: 48px;
+    height: 48px;
+}
+
+.search_form__button {
+    padding: 0;
+    font-family: Plus Jakarta Sans, Verdana, Geneva, Tahoma, sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    color: #0A2530;
+    opacity: 0.7;
 }
 
 .menu__button:hover {
