--- a/src/style.css
+++ b/src/style.css
@@ -89,7 +89,7 @@ body {
 }
 
 .button__text {
-    font-family: 'Poppins', Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Poppins, Verdana, Geneva, Tahoma, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -105,6 +105,15 @@ body {
     margin: auto;
 }
 
+.content h2 {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 25px;
+    color: #000000;
+    margin-right: 0;
+    margin-bottom: 0;
+}
+
 .content__view_collection {
     background-color: #BCECFC;
     border-radius: 8px;
@@ -112,21 +121,24 @@ body {
     font-size: 18px;
 }
 
-.content__view_collection h2{
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 25px;  
-    color: #000000;
-    margin-right: 0;
-    margin-bottom: 0;
-}
-
 .view_collection__button{
     width: 144px;
     height: 38px;
     position: relative;
     bottom: -30%;
-    
+}
+
+.content__see_more {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    color: #0A2530;
+    opacity: 0.7;
+}
+
+.content__like{
+
 }
 
 /* .form_search__input {
